; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/ath/ath9k/extr_main.c_ath9k_bss_assoc_iter.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/ath/ath9k/extr_main.c_ath9k_bss_assoc_iter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ieee80211_vif = type { %struct.ieee80211_bss_conf }
%struct.ieee80211_bss_conf = type { i64 }
%struct.ath_softc = type { i32 }

@SC_OP_PRIM_STA_VIF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32*, %struct.ieee80211_vif*)* @ath9k_bss_assoc_iter to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ath9k_bss_assoc_iter(i8* %0, i32* %1, %struct.ieee80211_vif* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.ieee80211_vif*, align 8
  %7 = alloca %struct.ath_softc*, align 8
  %8 = alloca %struct.ieee80211_bss_conf*, align 8
  store i8* %0, i8** %4, align 8
  store i32* %1, i32** %5, align 8
  store %struct.ieee80211_vif* %2, %struct.ieee80211_vif** %6, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = bitcast i8* %9 to %struct.ath_softc*
  store %struct.ath_softc* %10, %struct.ath_softc** %7, align 8
  %11 = load %struct.ieee80211_vif*, %struct.ieee80211_vif** %6, align 8
  %12 = getelementptr inbounds %struct.ieee80211_vif, %struct.ieee80211_vif* %11, i32 0, i32 0
  store %struct.ieee80211_bss_conf* %12, %struct.ieee80211_bss_conf** %8, align 8
  %13 = load i32, i32* @SC_OP_PRIM_STA_VIF, align 4
  %14 = load %struct.ath_softc*, %struct.ath_softc** %7, align 8
  %15 = getelementptr inbounds %struct.ath_softc, %struct.ath_softc* %14, i32 0, i32 0
  %16 = call i64 @test_bit(i32 %13, i32* %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %19

18:                                               ; preds = %3
  br label %28

19:                                               ; preds = %3
  %20 = load %struct.ieee80211_bss_conf*, %struct.ieee80211_bss_conf** %8, align 8
  %21 = getelementptr inbounds %struct.ieee80211_bss_conf, %struct.ieee80211_bss_conf* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %28

24:                                               ; preds = %19
  %25 = load %struct.ath_softc*, %struct.ath_softc** %7, align 8
  %26 = load %struct.ieee80211_vif*, %struct.ieee80211_vif** %6, align 8
  %27 = call i32 @ath9k_set_assoc_state(%struct.ath_softc* %25, %struct.ieee80211_vif* %26)
  br label %28

28:                                               ; preds = %18, %24, %19
  ret void
}

declare dso_local i64 @test_bit(i32, i32*) #1

declare dso_local i32 @ath9k_set_assoc_state(%struct.ath_softc*, %struct.ieee80211_vif*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
